--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 <section class="ae-container-fluid rk-main">
-<app-portafolio></app-portafolio>
+    <router-outlet></router-outlet>
+<!--<app-item></app-item>-->
+<!--<app-about></app-about>-->
 </section>
 <app-footer></app-footer>
