--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -24,7 +24,7 @@
 <!---->
 <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4" *ngIf="!productosService.cargando">
   <a *ngFor="let producto of productosService.productos" 
-  routerLink="/item" routerLinkActive="router-link-active"  
+  [routerLink]="['/item', producto.cod]" routerLinkActive="router-link-active"  
   class="animated fadeIn  rk-item ae-masonry__item">
   <img src="assets/productos/{{producto.url}}.jpg" alt="">
     <div class="item-meta">
